# team2-delivery

./: .gitignore  CMakeLists.txt  HARDWARE_RUN.md  README.md  explore_debug.csv  package.xml
action/: ScanTable.action
config/: amcl.yaml  hotspots.yaml  move_base_delivery.yaml  move_base_delivery_hw.yaml  move_base_mapping.yaml  move_base_mapping_hw.yaml  robot.rviz  table_locations.yaml
launch/: hardware_delivery.launch  hotspot_visualizer.launch  mapping.launch  mapping_hw.launch  sim.launch  sim_delivery.launch  sim_mapping.launch  team2_delivery.launch
legacy/: position_publisher.py
legacy/launch/: mapping.launch  mapping_hw.launch  team2_delivery.launch
legacy/msg/: SafetyStatus.msg
maps/: my_map_explore_ben_house.pgm  my_map_explore_ben_house_robot.yaml  restaurant_map.pgm  restaurant_map.yaml
models/human/: model.config  model.sdf
models/triton/: model.config  model.sdf
msg/: Observation.msg  QRInfo.msg
plugins/: model_push.cc
scripts/: cmd_mux.py  delivery_debug_logger.py  delivery_state_machine.py  exploration_navigator.py  explore_debug_logger.py  generate_hotspots.py  hardware_bridge.py  hotspot_visualizer.py  human_controller.py  nav_manager.py  perception_hub.py  position_publisher.py  qr_detector.py  qr_goal_tracker.py  task_coordinator.py  test_nodes.py
world/: turtlebot3_house.world
